Swagger Updated, GitIgnore Updated, Readme Modified
